created structure and styling for basic home login page

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../styles/index.css">
     <title>ircClient</title>
 </head>
 <body>
+    <h1>IRC Client</h1>
+    <form action="/" method="post">
+        <h2>Login</h2>
+        <label for="username"></label>
+        <input id="username" name="username" type="text" placeholder="username">
+
+        <label for="password"></label>
+        <input id="password" name="password" type="password" placeholder="password">
+
+        <label for="submit"></label>
+        <input id="submit" name="submit" type="submit">
+    </form>
     
 </body>
 </html>
