--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -11,13 +11,18 @@
     <form action="/" method="post">
         <h2>Login</h2>
         <label for="username"></label>
-        <input id="username" name="username" type="text" placeholder="username">
+        <input required id="username" name="username" type="text" placeholder="username">
 
         <label for="password"></label>
-        <input id="password" name="password" type="password" placeholder="password">
+        <input required id="password" name="password" type="password" placeholder="password">
 
         <label for="submit"></label>
         <input id="submit" name="submit" type="submit">
+
+        <div id="accountLinks">
+            <a href="/create">Create Account</a>
+            <a href="/reset">Reset Password</a>
+        </div>
     </form>
     
 </body>
