--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>IRC Client</h1>
-    <form action="/" method="post">
+    <form action="/auth/login" method="post">
         <h2>Login</h2>
-        <label for="username"></label>
-        <input required id="username" name="username" type="text" placeholder="email">
+        <label for="email"></label>
+        <input required id="email" name="email" type="email" placeholder="email">
 
         <label for="password"></label>
         <input required id="password" name="password" type="password" placeholder="password">
